--- a/planetaryacres.html
+++ b/planetaryacres.html
@@ -106,7 +106,7 @@
          else{
              alert("Enter Name !");
          }
-         reslt();
+         reslt(
      }
      function randacr(){
      var pnums = [87,97,98,99,90,93,45,78,0,3,100,99,100,40,89,80,96,94,85,88,71,78,79,69,94,84,81,65,50,60,70,83,32,56,58,72,66,43,12,16,32,42,48,100,98];
