--- a/planetaryacres.html
+++ b/planetaryacres.html
@@ -89,7 +89,7 @@
      </div>
  <script>
      var name;
-     var hlink="";
+     var ="";
      function next(){
           name = document.getElementById("name").value;
           var addname = document.getElementById("nms");
@@ -101,7 +101,7 @@
          attrib.innerHTML="Made by Balaji Murumbe";
          if(name!=""){
          pg1.style.display="none";
-         pg2.style.display="block";
+         pg2.style.display="none"; 
          }
          else{
              alert("Enter Name !");
@@ -109,8 +109,8 @@
          reslt(
      }
      function randacr(){
-     var pnums = [87,97,98,99,90,93,45,78,0,3,100,99,100,40,89,80,96,94,85,88,71,78,79,69,94,84,81,65,50,60,70,83,32,56,58,72,66,43,12,16,32,42,48,100,98];
-         pacr = Math.floor(Math.random()*pnums.length)+0;
+     var pnums = "87,97,98,99,90,93,45,78,0,3,100,99,100,40,89,80,96,94,85,88,71,78,79,69,94,84,81,65,50,60,70,83,32,56,58,72,66,43,12,16,32,42,48,100,98];
+          Math.floor(Math.random()*pnums.length)+0;
          return pnums[pacr];
      }
      
@@ -138,4 +138,5 @@ shlink.setAttribute("href",shareres);
 </body>
 </html>
 <!-- This is magic made by using some what programming logic. we want to make it Dynamically available for everyone. so, we are processing some sort of creativity. -->
-<!-- made by balaji Murumbe. -->
+<!-- made by balaji Murumbe. Error : blockvararrhlink -->
+
