--- a/signuppgversion2.html
+++ b/signuppgversion2.html
@@ -1,4 +1,4 @@
-<-- Magic logic project. Signup page version 2. Changes : fixed bugs -->
+<!-- Magic logic project. Signup page version 2. Changes : fixed bugs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
